--- a/style.css
+++ b/style.css
@@ -17,3 +17,23 @@ h1 {
 	border-radius: 25px;
 	align: center;
 }
+
+.column {
+	float: left;
+	width: 200px;
+	padding: 10px;
+}
+
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.left {
+	width: 30%;
+}
+
+.right {
+	width: 70%;
+}
